package compToDS;

message inputRequest {
	optional string inputPath = 3;
	optional string outputPath = 4;
	optional int32 errCode = 2;
}

message outputRequest {
	optional string outputPath = 3;
	optional string delimiter = 4;
	optional int32 errCode = 5;
	optional string data = 6;
}

message inputDataBack {
	repeated int32 data = 1;
	optional int32 errCode = 2;
}

message emptyMessage {

}



// do input
service receiveInputService {
	rpc readInputData (inputRequest) returns (inputDataBack) {}
}

// do output
service receiveOutputService {
	rpc receiveDataStoreRequest (outputRequest) returns (emptyMessage) {}
}